--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,5 @@
             "type": "image/png"
         }
     ],
-    "start_url": "/insects/index.html"
+    "start_url": "/insectDownloadable/index.html"
 }
