--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,5 @@
             "type": "image/png"
         }
     ],
-    "start_url": "/
-insectsDownloadable/index.html"
+    "start_url": "/insectsDownloadable/index.html"
 }
